# fxtui-playground

./: .gitignore  CMakeLists.txt  README.md
.claude/: skill-stats.md
.claude/skills/commit-push/: SKILL.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/ftxui-guide-cpp/: SKILL.md
.claude/skills/ftxui-guide-cpp/references/: dom-api.md  examples.md
.claude/skills/fxtui-guide-cpp/: SKILL.md
.claude/skills/fxtui-guide-cpp/references/: component-api.md
.claude/skills/pull/: SKILL.md
.claude/skills/refactor-cpp/: SKILL.md
src/calendar/: main.cpp
src/game_of_life/: main.cpp
src/hello_world/: main.cpp
src/histogram/: main.cpp
src/matrix/: main.cpp
src/messaging_app/: main.cpp
src/scatter_plot/: main.cpp
src/system_monitor/: main.cpp
src/text_editor/: main.cpp
